# gooyah

./: .gitignore  Makefile.am  README.md  VK.CPP  configure.ac  flake.nix  main.py
contrib/: _incr_version
core/: __init__.py  config.py  helpers.py  lists.py
nix/_automation/: autotools.nix  c.nix  configs.nix  cpp.nix  devshells.nix  pkg-config.nix  strOrPackage.nix
nix/gooyah/: apps.nix  packages.nix
prompt/: __init__.py
src/: main.cpp
